cov-orders-vulcan-test: v0.0.8 | branch: unknown | 2026-02-20T19-06-37

--- a/cov-orders-vulcan-test/index.html
+++ b/cov-orders-vulcan-test/index.html
@@ -17,5 +17,5 @@
 <body>
 <a id="applink" style="display:none;"></a>
 <app-orders-vulcan-test>Loading, please wait.</app-orders-vulcan-test>
-<link rel="modulepreload" href="chunk-XZCYWB3A.js"><script src="main-RNROESFU.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-XZCYWB3A.js"><script src="main-VEMOEKLD.js" type="module"></script></body>
 </html>
